// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`concat-expression strings ast: ast 1`] = `
Object {
  "body": Array [
    Object {
      "innerComments": Array [],
      "leadingComments": Array [],
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 1,
          "offset": 2,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "trailingComments": Array [],
      "type": "StringLiteral",
      "value": "\\"a\\"",
    },
    Object {
      "innerComments": Array [],
      "leadingComments": Array [],
      "loc": Object {
        "end": Object {
          "column": 7,
          "line": 1,
          "offset": 6,
        },
        "start": Object {
          "column": 5,
          "line": 1,
          "offset": 4,
        },
      },
      "trailingComments": Array [],
      "type": "StringLiteral",
      "value": "\\"b\\"",
    },
    Object {
      "innerComments": Array [],
      "leadingComments": Array [],
      "loc": Object {
        "end": Object {
          "column": 11,
          "line": 1,
          "offset": 10,
        },
        "start": Object {
          "column": 9,
          "line": 1,
          "offset": 8,
        },
      },
      "trailingComments": Array [],
      "type": "StringLiteral",
      "value": "\\"c\\"",
    },
  ],
  "innerComments": Array [],
  "leadingComments": Array [],
  "loc": Object {
    "end": Object {
      "column": 11,
      "line": 1,
      "offset": 10,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "trailingComments": Array [],
  "type": "ConcatExpression",
}
`;

exports[`concat-expression strings format: format long 1`] = `"a" "b" "c"`;

exports[`concat-expression strings format: format short 1`] = `
"a"
  "b"
  "c"
`;

exports[`concat-expression strings token 1`] = `
Array [
  "a",
  "b",
  "c",
]
`;

exports[`concat-expression variables ast: ast 1`] = `
Object {
  "body": Array [
    Object {
      "base": Object {
        "base": Object {
          "innerComments": Array [],
          "leadingComments": Array [],
          "loc": Object {
            "end": Object {
              "column": 3,
              "line": 1,
              "offset": 2,
            },
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "name": "req",
          "trailingComments": Array [],
          "type": "Identifier",
        },
        "innerComments": Array [],
        "leadingComments": Array [],
        "loc": Object {
          "end": Object {
            "column": 8,
            "line": 1,
            "offset": 7,
          },
          "start": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "member": Object {
          "innerComments": Array [],
          "leadingComments": Array [],
          "loc": Object {
            "end": Object {
              "column": 8,
              "line": 1,
              "offset": 7,
            },
            "start": Object {
              "column": 5,
              "line": 1,
              "offset": 4,
            },
          },
          "name": "http",
          "trailingComments": Array [],
          "type": "Identifier",
        },
        "trailingComments": Array [],
        "type": "Member",
      },
      "innerComments": Array [],
      "leadingComments": Array [],
      "loc": Object {
        "end": Object {
          "column": 10,
          "line": 1,
          "offset": 9,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "member": Object {
        "innerComments": Array [],
        "leadingComments": Array [],
        "loc": Object {
          "end": Object {
            "column": 10,
            "line": 1,
            "offset": 9,
          },
          "start": Object {
            "column": 10,
            "line": 1,
            "offset": 9,
          },
        },
        "name": "A",
        "trailingComments": Array [],
        "type": "Identifier",
      },
      "trailingComments": Array [],
      "type": "Member",
    },
    Object {
      "base": Object {
        "base": Object {
          "innerComments": Array [],
          "leadingComments": Array [],
          "loc": Object {
            "end": Object {
              "column": 14,
              "line": 1,
              "offset": 13,
            },
            "start": Object {
              "column": 12,
              "line": 1,
              "offset": 11,
            },
          },
          "name": "req",
          "trailingComments": Array [],
          "type": "Identifier",
        },
        "innerComments": Array [],
        "leadingComments": Array [],
        "loc": Object {
          "end": Object {
            "column": 19,
            "line": 1,
            "offset": 18,
          },
          "start": Object {
            "column": 12,
            "line": 1,
            "offset": 11,
          },
        },
        "member": Object {
          "innerComments": Array [],
          "leadingComments": Array [],
          "loc": Object {
            "end": Object {
              "column": 19,
              "line": 1,
              "offset": 18,
            },
            "start": Object {
              "column": 16,
              "line": 1,
              "offset": 15,
            },
          },
          "name": "http",
          "trailingComments": Array [],
          "type": "Identifier",
        },
        "trailingComments": Array [],
        "type": "Member",
      },
      "innerComments": Array [],
      "leadingComments": Array [],
      "loc": Object {
        "end": Object {
          "column": 21,
          "line": 1,
          "offset": 20,
        },
        "start": Object {
          "column": 12,
          "line": 1,
          "offset": 11,
        },
      },
      "member": Object {
        "innerComments": Array [],
        "leadingComments": Array [],
        "loc": Object {
          "end": Object {
            "column": 21,
            "line": 1,
            "offset": 20,
          },
          "start": Object {
            "column": 21,
            "line": 1,
            "offset": 20,
          },
        },
        "name": "B",
        "trailingComments": Array [],
        "type": "Identifier",
      },
      "trailingComments": Array [],
      "type": "Member",
    },
  ],
  "innerComments": Array [],
  "leadingComments": Array [],
  "loc": Object {
    "end": Object {
      "column": 21,
      "line": 1,
      "offset": 20,
    },
    "start": Object {
      "column": 10,
      "line": 1,
      "offset": 9,
    },
  },
  "trailingComments": Array [],
  "type": "ConcatExpression",
}
`;

exports[`concat-expression variables format: format long 1`] = `req.http.A req.http.B`;

exports[`concat-expression variables format: format short 1`] = `
req
    .http
    .A
  req
    .http
    .B
`;

exports[`concat-expression variables token 1`] = `
Array [
  req,
  .,
  http,
  .,
  A,
  req,
  .,
  http,
  .,
  B,
]
`;
